syntax = "proto3";

package postr.ip_posts.v1;

import "google/api/annotations.proto";
import "google/protobuf/field_mask.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/hi20160616/postr/api/postr/v1;v1";

service IpPostsAPI {
  rpc ListIpPosts(ListIpPostsRequest) returns (ListIpPostsResponse) {
    option (google.api.http) = {
      get: "/v1/{parent=ips_posts}"
      additional_bindings {
	get: "/v1/{parent=ip/*}/ip_posts"
      }
    };
  }
  rpc GetIpPost(GetIpPostRequest) returns (IpPost) {
    option (google.api.http) = {
      get: "/v1/{name=ip_posts/*}"
    };
  }
  rpc CreateIpPost(CreateIpPostRequest) returns (IpPost) {
    option (google.api.http) = {
      post: "/v1/{parent=ip_posts/*/create}"
      body: "ip_post"
    };
  }
  rpc UpdateIpPost(UpdateIpPostRequest) returns (IpPost) {
    option (google.api.http) = {
      patch: "/v1/{ip_post.name=ip_posts/*/update}"
      body: "ip_post"
    };
  }
  rpc DeleteIpPost(DeleteIpPostRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1/{name=ip_posts/*/delete}"
    };
  }
}

message ListIpPostsRequest{
  // The parent resource name
  string parent = 1;

  // The maximum number of items to return.
  int32 page_size = 2;

  // The next_page_token value returned from a previous List request, if any.
  string page_token = 3;
}

message ListIpPostsResponse{
  repeated IpPost ipPosts = 1;
  string next_page_token = 2;
}

message GetIpPostRequest {
  string name = 1;
}

message CreateIpPostRequest {
  string parent = 1;
  int32 ip_post_id = 2;
  IpPost ip_post = 3;
}

message UpdateIpPostRequest {
  IpPost ip_post = 1;
  // The update mask applies to the resource. For the `FieldMask` definition,
  // see https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#fieldmask
  google.protobuf.FieldMask update_mask = 2;
}

message DeleteIpPostRequest {
  string name = 1;
}

message IpPost{
  string name = 1;
  int32 ip_post_id = 2;
  string ip = 3;
  int32 post_id = 4;
  string opts = 5;
  string txtField = 6;
}

message IpPosts{
  repeated IpPost ip_posts = 1;
}
